--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/my_toolbar"
             android:clickable="true"
-            android:background="@color/gray">
+            android:background="@color/gray"
+            android:focusable="true">
 
             <LinearLayout
                 android:id="@+id/buyLayout"
@@ -100,6 +101,7 @@
                 <Button
                     android:id="@+id/buyButton"
                     style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:enabled="false"
                     android:layout_width="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_height="wrap_content"
@@ -109,13 +111,6 @@
 
             </LinearLayout>
 
-            <com.google.android.gms.ads.AdView
-                android:id="@+id/adView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/buyLayout"
-                ads:adSize="BANNER"
-                ads:adUnitId="ca-app-pub-8816231201193091/8419082785" />
         </RelativeLayout>
 
     </RelativeLayout>
