--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -1,60 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                     xmlns:tools="http://schemas.android.com/tools"
+                                                     android:layout_width="match_parent"
+                                                     android:layout_height="match_parent">
 
     <View xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:background="@drawable/shape_gradient_top_shadow"
-        app:layout_anchor="@id/bottom_sheet" />
+          xmlns:app="http://schemas.android.com/apk/res-auto"
+          android:id="@+id/shadow"
+          android:layout_width="match_parent"
+          android:layout_height="8dp"
+          android:background="@drawable/shape_gradient_top_shadow"
+          app:layout_anchor="@id/bottom_sheet"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/bottom_sheet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray"
-        android:orientation="vertical"
-        app:behavior_hideable="true"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:id="@+id/bottom_sheet"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="@color/gray"
+                  android:orientation="vertical"
+                  app:behavior_hideable="true"
+                  app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+    >
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="Tur bygdøy rundt." />
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Tur bygdøy rundt."/>
 
         <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center|start"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="Flott rundtur bygdøy rundt" />
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center|start"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                tools:text="Flott rundtur bygdøy rundt"/>
 
         <Button
-            android:id="@+id/url"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/mer_info" />
+                android:id="@+id/url"
+                style="@style/Base.Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mer_info"/>
 
     </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
